# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

[metadata]
name = rtox
author = Dolph Mathews
author-email = dolph.mathews@gmail.com
summary = Remote tox test runner
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = http://github.com/pycontribs/rtox
project_urls =
    Bug Tracker = https://github.com/pycontribs/rtox/issues
    Documentation = https://github.com/pycontribs/rtox/blob/master/README.rst
    Source Code = https://github.com/pycontribs/rtox.git
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Utilities
keywords =
    tox
    remote
    ssh

[files]
packages =
    rtox

[entry_points]
console_scripts =
  rtox=rtox.rtox:cli
  untox=rtox.untox:main

[egg_info]
egg_base = .

[pbr]
warnerrors = true

[bdist_wheel]
universal = 1

[flake8]
exclude = .git,__pycache__,build,dist,rtox/fabric
